--- a/package.json
+++ b/package.json
@@ -15,6 +15,7 @@
     },
     "devDependencies": {
         "@eslint/js": "^9.9.0",
+        "@types/node": "^22.4.1",
         "@types/react": "^18.3.3",
         "@types/react-dom": "^18.3.0",
         "@vitejs/plugin-react-swc": "^3.5.0",
@@ -24,6 +25,7 @@
         "eslint-plugin-react-hooks": "^5.1.0-rc.0",
         "eslint-plugin-react-refresh": "^0.4.9",
         "globals": "^15.9.0",
+        "path": "^0.12.7",
         "postcss": "^8.4.41",
         "tailwindcss": "^3.4.10",
         "typescript": "^5.5.3",
