bug: production 환경에서 theme.ts 경로가 일치하지 않아 404에러 뜨는 것

--- a/tsconfig.app.json
+++ b/tsconfig.app.json
@@ -25,6 +25,6 @@
             "@/*": ["./src/app/*"]
         }
     },
-    "include": ["src"],
+    "include": ["src", "public/theme.ts"],
     "exclude": ["node_modules", "dist"]
 }
