bug: theme.ts에서 theme.js로 변경 후 브라우저에서 실행되도록 수정

--- a/tsconfig.app.json
+++ b/tsconfig.app.json
@@ -25,6 +25,6 @@
             "@/*": ["./src/app/*"]
         }
     },
-    "include": ["src", "public/theme.ts"],
+    "include": ["src", "public/theme.js"],
     "exclude": ["node_modules", "dist"]
 }
