--- a/.github/workflows/deploy.yml
+++ b/.github/workflows/deploy.yml
@@ -24,21 +24,34 @@ jobs:
         steps:
             - name: Checkout
               uses: actions/checkout@v4
+
             - name: Set up Node
               uses: actions/setup-node@v4
               with:
                   node-version: 20
-                  cache: 'npm'
+
+            - name: Remove node_modules and package-lock.json
+              run: |
+                rm -rf node_modules
+                rm -f package-lock.json
+
+            - name: Clear NPM cache
+              run: npm cache clean --force
+
             - name: Install dependencies
-              run: npm ci
+              run: npm install
+
             - name: Build
               run: npm run build
+
             - name: Setup Pages
               uses: actions/configure-pages@v4
+
             - name: Upload artifact
               uses: actions/upload-pages-artifact@v3
               with:
                   path: './dist'
+
             - name: Deploy to GitHub Pages
               id: deployment
               uses: actions/deploy-pages@v4
