bug: safari에서 상태바 색상 불일치 해결

--- a/tsconfig.app.json
+++ b/tsconfig.app.json
@@ -25,6 +25,6 @@
             "@/*": ["./src/app/*"]
         }
     },
-    "include": ["src", "public/theme.js"],
+    "include": ["src"],
     "exclude": ["node_modules", "dist"]
 }
